# veille_agent

./: .buildinfo  .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.cfg.example  docker-compose.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  run.sh  search.html  searchindex.js  tasks.py
.github/workflows/: docs.yml  lint.yml  test.yml  weekly-watch.yml
_sources/: index.rst.txt
docs/source/: conf.py  modules.rst
src/veille_agent/: __init__.py  __main__.py
src/veille_agent/config/: profile.yaml
tests/: conftest.py
tests/unit/: test_analyst.py  test_briefing.py  test_collector.py  test_mailer.py  test_main.py  test_profile.py  test_reader.py  test_recap.py  test_youtube.py
